# bot-launcher

./: Dockerfile  Project_initialization_flow.txt  docker-compose.yml  pyproject.toml
Documentation/: IMPROVEMENTS_SUMMARY.md  MIGRATION_UNIFIED_APP.md  interfaces_and_base_specs info.txt  project_structure.txt
examples/shared/config_examples/: retrieval_setting_check.py
src/bot_launcher/: __init__.py  app.py  app_docker.py  app_local.py  cli.py  main.py  test1_check.py  test2_check.py
src/bot_launcher/api_routers/: api.py
src/bot_launcher/api_routers/v1/: api_v1.py
src/bot_launcher/api_routers/v1/endpoints/: bot_router.py  launcher_router.py
src/bot_launcher/services/: base_strategy.py  deps.py  docker_strategy.py  local_strategy.py  local_strategy_working_code.py
src/bots/rebalancing_bot/: cli.py  main.py
src/bots/rebalancing_bot/core/: rebalancer_old.py
src/shared/: config.py  health_cli.py  launcher.py
src/shared/business_rules/connectivity/: service_health.py
src/shared/business_rules/exchange/: minimum_order.py  precision.py  step_and_tick_size.py
src/shared/domain/models/: __init__.py  accounts.py  analytics.py  market.py  strategy.py  trading.py
src/shared/domain/models/common/: symbol.py
src/shared/domain/specifications/: __init__.py  connectivity_specs.py  trade_specs.py
src/shared/utils/: calculations.py  port_utils.py
tests/unit/shared/domain/models/: test_market_rules.py
tests/unit/shared/domain/models/common/: test_symbol.py
